internal/testdata/sdk/error/fixtures/teapot_error.go
// Generated by Fern. Do not edit.

package api

import (
	json "encoding/json"
	fmt "fmt"
)

type TeapotError struct {
	StatusCode int
	Body       []string
}

func (t *TeapotError) Error() string {
	return fmt.Sprintf("418: %+v", *t)
}

func (t *TeapotError) UnmarshalJSON(data []byte) error {
	var body []string
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	t.StatusCode = 418
	t.Body = body
	return nil
}

func (t *TeapotError) MarshalJSON() ([]byte, error) {
	return json.Marshal(t.Body)
}
